--- a/osmfr.yml
+++ b/osmfr.yml
@@ -148,7 +148,9 @@ Layer:
       <<: *osm2pgsql
       table: >-
         /* landcover-line */ (
-          SELECT way FROM planet_osm_line WHERE man_made='cutline'
+          SELECT way
+          FROM planet_osm_line
+          WHERE man_made='cutline'
         ) as landcover
       simplify_geometries: 'true'
 
@@ -616,7 +618,14 @@ Layer:
     zoom_min: 16
     Datasource:
       <<: *osm2pgsql
-      table: " /* line-barriers */ (select way, barrier, junction from planet_osm_line where barrier is not null) as roads"
+      table: >-
+        /* line-barriers */ (
+          select way,
+            barrier,
+            junction
+          from planet_osm_line
+          where barrier is not null
+        ) as roads
 
 
   - id: buildings
@@ -643,7 +652,13 @@ Layer:
     zoom_min: 18
     Datasource:
       <<: *osm2pgsql
-      table: " /* indoor */ (select way  from planet_osm_polygon  where tags->'room'='yes' or tags->'indoor'='yes') as indoor"
+      table: >-
+        /* indoor */ (
+          select way
+          from planet_osm_polygon
+          where tags->'room'='yes'
+            or tags->'indoor'='yes'
+        ) as indoor
 
 
   - id: tracks-notunnel-nobridge
@@ -651,7 +666,15 @@ Layer:
     zoom_min: 14
     Datasource:
       <<: *osm2pgsql
-      table: " /* tracks-notunnel-nobridge */ (select way,tracktype from planet_osm_line where highway='track' and (bridge is null or bridge in ('no','false','0')) and (tunnel is null or tunnel in ('no','false','0'))) as tracks"
+      table: >-
+        /* tracks-notunnel-nobridge */ (
+          select way,
+            tracktype
+          from planet_osm_line
+          where highway='track'
+            and (bridge is null or bridge in ('no','false','0'))
+            and (tunnel is null or tunnel in ('no','false','0'))
+        ) as tracks
       simplify_geometries: 'true'
 
 
@@ -720,7 +743,14 @@ Layer:
       minzoom: 14
     Datasource:
       <<: *osm2pgsql
-      table: " /* aerialways */ (select way,aerialway,name from planet_osm_line where aerialway is not null) as aerialways"
+      table: >-
+        /* aerialways */ (
+          select way,
+            aerialway,
+            name
+          from planet_osm_line
+          where aerialway is not null
+        ) as aerialways
       simplify_geometries: 'true'
 
 
@@ -730,7 +760,20 @@ Layer:
     zoom_max: 12
     Datasource:
       <<: *osm2pgsql
-      table: " /* roads */ (SELECT way,highway,junction,toll, case when railway='preserved' and service in ('spur','siding','yard') then 'INT-preserved-ssy'::text else railway end as railway  FROM  planet_osm_roads  WHERE  coalesce(tunnel,covered,'') not in ('yes','true','1') AND (highway is not null or (railway is not null and railway!='preserved' and (service is null or service not in ('spur','siding','yard'))) or railway='preserved') ORDER BY z_order) as roads"
+      table: >-
+        /* roads */ (
+          SELECT way,
+            highway,
+            junction,
+            toll,
+            case when railway='preserved' and service in ('spur','siding','yard') then 'INT-preserved-ssy'::text else railway end as railway
+          FROM  planet_osm_roads
+          WHERE  coalesce(tunnel,covered,'') not in ('yes','true','1')
+            AND (highway is not null
+              or (railway is not null and railway!='preserved' and (service is null or service not in ('spur','siding','yard')))
+              or railway='preserved')
+          ORDER BY z_order
+        ) as roads
       simplify_geometries: 'true'
 
 
